<resources>  
    <string name="app_name">Miniflux</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>
    <string name="logout">Log out</string>
    
    <!-- activity_main -->
     <string name="sign_in">Sign in</string>
     <string name="sign_up">Sign up</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="webview">WebView</string>
      
     <!--  DisplayMessageActivity-->
    <!--  <string name="edit_message">Edit</string>  -->
     <string name="subscription">Subscribe</string>
     <string name="confirm">Confirm your password</string>
     
     <!-- activity_home -->
      <string name="home_label">Home</string>
      <string name="text_in_case_feed_list_empty">You are subscribed to any feeds</string>
      <string name="add_feed">Add feed</string>
      <string name="action_refresh">refresh</string>
      <string name="website">Website</string>
      <string name="link">Rss File Url</string>
      <string name="type">Type</string>
      <string name="register">Register</string>
       <string name="cancel">Cancel</string>
       
       <!-- activity items -->  
     <string name="items_label">Items</string>
     <string name="text_in_case_items_list_empty">No items</string>
     
     <string-array name="types_array">
        <item>Broad</item>
        <item>Music</item>
        <item>Sport</item>
        <item>Religion</item>
        <item>Education</item>
        <item>Other</item> 
    </string-array>
    
</resources>
